; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_fileio.c_check_marks_read.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_fileio.c_check_marks_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i32* }

@curbuf = common dso_local global %struct.TYPE_2__* null, align 8
@VIF_WANT_MARKS = common dso_local global i32 0, align 4
@TRUE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @check_marks_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @check_marks_read() #0 {
  %1 = load %struct.TYPE_2__*, %struct.TYPE_2__** @curbuf, align 8
  %2 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %1, i32 0, i32 0
  %3 = load i64, i64* %2, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %16, label %5

5:                                                ; preds = %0
  %6 = call i64 @get_viminfo_parameter(i8 signext 39)
  %7 = icmp sgt i64 %6, 0
  br i1 %7, label %8, label %16

8:                                                ; preds = %5
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** @curbuf, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 1
  %11 = load i32*, i32** %10, align 8
  %12 = icmp ne i32* %11, null
  br i1 %12, label %13, label %16

13:                                               ; preds = %8
  %14 = load i32, i32* @VIF_WANT_MARKS, align 4
  %15 = call i32 @read_viminfo(i32* null, i32 %14)
  br label %16

16:                                               ; preds = %13, %8, %5, %0
  %17 = load i64, i64* @TRUE, align 8
  %18 = load %struct.TYPE_2__*, %struct.TYPE_2__** @curbuf, align 8
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  store i64 %17, i64* %19, align 8
  ret void
}

declare dso_local i64 @get_viminfo_parameter(i8 signext) #1

declare dso_local i32 @read_viminfo(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
